--- a/src/style.css
+++ b/src/style.css
@@ -15,11 +15,10 @@
 
 /* Clase para limitar el ancho a 1200px */
 .ancho {
-  max-width: 1200px;
+  max-width: 1250px;
   width: 100%;
   margin: 0 auto;
   display: block; /* Cambiar de flex a block si no necesitas alinear todo al centro */
-
 }
 
 a {
@@ -37,6 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #9ec5ff;
 }
 
 h1 {
@@ -69,7 +69,6 @@ button:focus-visible {
 
 #app {
   margin: 0 auto;
-  text-align: center;
 }
 
 @media (prefers-color-scheme: light) {
